# learn_python

./: README.md  main.py  pyproject.toml
bootdev/: comparisons.py  computing.py  functions.py
tests/: test_class.py  test_functions.py  test_sum.py
